# cv-cuda

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run.sh
src/: lk_parallel.cpp  lk_serial.cpp  sub_parallel.cpp  sub_serial.cpp
